Disable spellcheck and fix misalignment this time for real

--- a/static/sass/proof.sass
+++ b/static/sass/proof.sass
@@ -26,7 +26,6 @@
   margin-top: 1vh
   margin-bottom: 1vh
   padding: 1vh
-  font-size: $normal-text-size
   font-family: $font-ui
   background-color: $background2
   border-radius: 0.5vw
@@ -77,6 +76,7 @@
   border: none
   width: 100%
   padding-left: 0.3vw
+  line-height: 1
 
 // Subproof with left border
 .subproof
@@ -131,6 +131,7 @@
 .rule-input
   border: none
   width: 100%
+  line-height: 1
 
 
 // -----------------------------------------------------------------------------
